--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
     "file-system": "^2.2.2",
+    "fs": "0.0.1-security",
     "method-override": "^3.0.0",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.1",
