--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {},
   "scripts": {
 	"start":"node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC"
