--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,23 @@
 {
   "development": {
-    "username": "root",
-    "password": "",
-    "database": "nodejs",
-    "host": "127.0.0.1",
+    "username": "b2d9c7e960c28c",
+    "password": "04d0654b",
+    "database": "heroku_4bf20b93ecd3ec1",
+    "host": "us-cdbr-east-04.cleardb.com",
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": "",
-    "database": "nodejs",
-    "host": "127.0.0.1",
+    "username": "b2d9c7e960c28c",
+    "password": "04d0654b",
+    "database": "heroku_4bf20b93ecd3ec1",
+    "host": "us-cdbr-east-04.cleardb.com",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": "",
-    "database": "nodejs",
-    "host": "127.0.0.1",
+    "username": "b2d9c7e960c28c",
+    "password": "04d0654b",
+    "database": "heroku_4bf20b93ecd3ec1",
+    "host": "us-cdbr-east-04.cleardb.com",
     "dialect": "mysql"
   }
 }
