--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql": "^2.16.0",
     "mysql2": "^1.6.1",
     "nodemailer": "^4.6.8",
+    "nodemon": "^2.0.12",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
